--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -23,7 +23,18 @@ boder-1px($color)
     height:1px
     content: ''
 
-// 扩展点击区域
+boder-1px-top($color)
+  position: relative
+  &::after
+    display :block
+    position absolute
+    left :0px
+    top :0px
+    height :1px
+    width:100%
+    background-color: $color
+    content:' '
+    // 扩展点击区域
 extend-click()
   position: relative
   &:before
