--- a/src/common/stylus/icon.css
+++ b/src/common/stylus/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icon';
-  src:  url('../fonts/icon.eot?eplw50');
-  src:  url('../fonts/icon.eot?eplw50#iefix') format('embedded-opentype'),
-    url('../fonts/icon.ttf?eplw50') format('truetype'),
-    url('../fonts/icon.woff?eplw50') format('woff'),
-    url('../fonts/icon.svg?eplw50#icon') format('svg');
+  src:  url('../fonts/icon.eot?g47en9');
+  src:  url('../fonts/icon.eot?g47en9#iefix') format('embedded-opentype'),
+    url('../fonts/icon.ttf?g47en9') format('truetype'),
+    url('../fonts/icon.woff?g47en9') format('woff'),
+    url('../fonts/icon.svg?g47en9#icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,7 +24,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-back:before {
+.icon-close:before {
   content: "\e900";
 }
 .icon-friends_circle .path1:before {
@@ -369,58 +369,70 @@
 .icon-icon-views:before {
   content: "\e94a";
 }
-.icon-music_left_button:before {
+.icon-menu:before {
   content: "\e94b";
 }
-.icon-music_like:before {
+.icon-music_left_button:before {
   content: "\e94c";
 }
-.icon-music_list_clear:before {
+.icon-music_like:before {
   content: "\e94d";
 }
-.icon-music_list_loop:before {
+.icon-music_list_clear:before {
   content: "\e94e";
 }
-.icon-music_list_menu:before {
+.icon-music_list_loop:before {
   content: "\e94f";
 }
-.icon-music_not_like:before {
+.icon-music_list_menu:before {
   content: "\e950";
 }
-.icon-music_one_loop:before {
+.icon-music_not_like:before {
   content: "\e951";
 }
-.icon-music_pause_button:before {
+.icon-music_one_loop:before {
   content: "\e952";
 }
-.icon-music_play_bar:before {
+.icon-music_pause_button:before {
   content: "\e953";
 }
-.icon-music_play_button:before {
+.icon-music_play_bar:before {
   content: "\e954";
 }
-.icon-music_random:before {
+.icon-music_play_button:before {
   content: "\e955";
 }
-.icon-music_right_button:before {
+.icon-music_random:before {
   content: "\e956";
 }
-.icon-music_search:before {
+.icon-music_right_button:before {
   content: "\e957";
 }
-.icon-music_share:before {
+.icon-music_search:before {
   content: "\e958";
 }
-.icon-QQ:before {
+.icon-music_share:before {
   content: "\e959";
+}
+.icon-QQ:before {
+  content: "\e95a";
   color: #68bef8;
 }
 .icon-weChat .path1:before {
-  content: "\e95a";
+  content: "\e95b";
   color: rgb(69, 196, 93);
 }
 .icon-weChat .path2:before {
-  content: "\e95b";
+  content: "\e95c";
   margin-left: -1em;
   color: rgb(81, 195, 50);
+}
+.icon-rocket:before {
+  content: "\e95d";
+}
+.icon-top:before {
+  content: "\e95e";
+}
+.icon-back:before {
+  content: "\e95f";
 }
